package com.shopping;

public interface Product {
    String getDescription();
    double getPrice();
    Object getId();
}
